Refs #117295 changed the following: - eea-responsive.js:   - wip hiding and showing of tabs and accordions   when jumping from mobile to desktop resolution - mini_header.scss:   - tweaked below content accordion stacks so that   they have same top and bottom margin - critical.scss:   - removed tweak of mini-header theme-tags since   they are now part of the accordion section in   the redesign - design-elements.css.dtml:   - increase margin for accordion-panels-plain panes - eea-base.css.dtml:   - removed link-category for section that no longer   had links such as themes and temporal coverage   - removed hiding of separators for sections that   were hidden with css - eea-theme-critical.scss:   - only the change language link should be white   for article-language

--- a/eea/design/skins/eeadesign_styles/eea-theme-critical.scss
+++ b/eea/design/skins/eeadesign_styles/eea-theme-critical.scss
@@ -253,7 +253,7 @@
   }
 
   #article-language .eea-icon:before,
-  #article-language a {
+  #article-language > a {
     color: #FFF;
   }
 
